# hk-camera-compressed

./: .gitignore  .gitmodules  CMakeLists.txt  package.xml
arduino/: arduino.ino
include/hk-camera-compressed/: CameraMaster.hpp  JPEGEncoder.hpp  SerialTrigger.hpp  hk-utils.hpp
src/: CameraMaster.cpp  bayer.hpp  bench.cpp  hk-utils.cpp  main.cpp
